--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -82,4 +82,15 @@
     - フィルター変更：パターン・形に当てはめて考えたり、意図的にそれを外して考えたりする
     - 言い換え：初めの問題認識を意識的に言い換えて、それまでとは異なる捉え方をする
   - 要因特定
+    - 初めの問題認識を、その理論的な構成要因に分解していき、問題を引き起こしている本当の原因を突き止めるもの
+    - 原因を特定して、意味合いを考えていく
   - グルーピング推理
+    - ある問題を見て解読してもうまくいかないときに、その他の問題も組み合わせてグルーピングしながら解読していくアプローチ
+    - 複数の解読を組み合わせるとよりよさげな解読にたどり着く
+- 情報を増やす前に【解読】を
+  - 多くの情報収集に走るのは「答えを探す」癖の人である
+  - 解読を工夫するのは「答えを創る」意識のある人である
+    - よりベターな答えにたどり着けるのは後者である
+  - 解読に必要な情報は「情報収集家」が考えているよりももっと少ない
+    - 逆に情報が多すぎると答えに辿り着けなくなる
+  - ある程度の情報から解読を試みて、もっともらしい解読に行き当たったときに初めて、その正しさを証明するために事実を集めれば良い
