--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -58,24 +58,24 @@
 - 万能薬「それ」と「それ以外」で対応できる
   - １つの解決策が思いつけば、「それ」の対極にあるあるものを探す
     - マクロ視点⇆ミクロ視点
-- 【解読・草案・評価・選択】で精度を上げる
-  - 解読：経験、論理的思考などを組み合わせながら、問題の本当の姿を掴む
-  - 創案：解読した問題に対し、解決するための方策すなわち解決策の選択肢をいくつか作り出すこと
-  - 評価：創出した複数の解決案選択肢に対して、優劣をつけること
-  - 選択：評価した選択肢の中から、最もベターな斧を選び出す
-  - 解読で空・雨を見つけ出し
-  - 創案・評価・選択で傘を決めていく
-- まずは【解読】に力を注ぐ
-  - 何を解読するのか？
-    - データ
-    - 人の話
-    - 起こっている現象
-  - 解読の２つのルール
-    - 問題が不明確な場合→独自に解読せよ
-    - 問題が明確に見える場合→それでも、独自に解読せよ
-      - 常識、経験や前例に剃って、形にはまったパターン認識をしやすい
-      - 目に見えやすい部分だけを問題と捉えやすい
-      - 多数意見・権威者の意見、印刷されたデータ・コメントを信じやすい
+##【解読・草案・評価・選択】で精度を上げる
+- 解読：経験、論理的思考などを組み合わせながら、問題の本当の姿を掴む
+- 創案：解読した問題に対し、解決するための方策すなわち解決策の選択肢をいくつか作り出すこと
+- 評価：創出した複数の解決案選択肢に対して、優劣をつけること
+- 選択：評価した選択肢の中から、最もベターな斧を選び出す
+- 解読で空・雨を見つけ出し
+- 創案・評価・選択で傘を決めていく
+## まずは【解読】に力を注ぐ
+- 何を解読するのか？
+  - データ
+  - 人の話
+  - 起こっている現象
+- 解読の２つのルール
+  - 問題が不明確な場合→独自に解読せよ
+  - 問題が明確に見える場合→それでも、独自に解読せよ
+    - 常識、経験や前例に剃って、形にはまったパターン認識をしやすい
+    - 目に見えやすい部分だけを問題と捉えやすい
+    - 多数意見・権威者の意見、印刷されたデータ・コメントを信じやすい
 - 解読の３パターン
   - 視点変更
     - 立ち位置変更：ものの見方を変える
@@ -94,3 +94,12 @@
   - 解読に必要な情報は「情報収集家」が考えているよりももっと少ない
     - 逆に情報が多すぎると答えに辿り着けなくなる
   - ある程度の情報から解読を試みて、もっともらしい解読に行き当たったときに初めて、その正しさを証明するために事実を集めれば良い
+
+##【創案】では致命的な洩れをなくす
+- 解決オプション（選択肢）の洩れをなくすことが大事
+- 情報収集や分析は何のために行うのか
+  - 解読のために行う
+  - 何が怒っているのか解読するため、データを集め、人の話を聞き、現象を観察する
+
+## 【創案】は、【解読】と明確に区別しよう
+- 
