--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -102,4 +102,6 @@
   - 何が怒っているのか解読するため、データを集め、人の話を聞き、現象を観察する
 
 ## 【創案】は、【解読】と明確に区別しよう
-- 
+- 解決策のオプションづk類は、情報収集や分析から必ずしも直接的に導かれるものではない
+- 創案ステップと、情報収集や分析が重要な役割を持つ解読ステップとは全く別物であり、解読ステップを第１の戦いとすると、創案ステップは全く異なる第２の戦いになる
+- ２つのステップの違いをはっきりとさせておかないと、切れ味の乏しい解決案になる
