--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -115,4 +115,12 @@
 - 洩れのない創案構造
 - 「何を」と「どうやって」の構造
 - 「OR型」と「AND型」の構造
-- 
+
+
+### あくまで客観性の高い「評価」を心がける
+- 評価とは、創出した解決案オプションの優劣をつけること
+- 客観性の高い評価を行うポイント
+  - 評価項目の偏りをなくす
+  - 優劣の基準を明確にする
+  - 採点の客観性・具体性を高める
+  - 客観性の高い総合評価を工夫する
