--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -124,3 +124,9 @@
   - 優劣の基準を明確にする
   - 採点の客観性・具体性を高める
   - 客観性の高い総合評価を工夫する
+
+- 評価項目の偏りをなくす
+  - 見えやすい項目と見えにくい項目を等距離で見る
+    - 
+  - 評価項目を論理的に隙なく固める
+  - 
