--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -127,6 +127,26 @@
 
 - 評価項目の偏りをなくす
   - 見えやすい項目と見えにくい項目を等距離で見る
-    - 
+    - どうしても「見えやすい項目」の方に自然に目が向きやすい、あるいは重きを置く傾向がある
+    - スクラムマスターの評価で、ベロシティに現れるものとそうでないマインドセットの取り組みとか
   - 評価項目を論理的に隙なく固める
-  - 
+    - 評価項目の論理構造を創る
+    - 定量評価、定性評価の
+  - 優劣の基準を明確にする
+    - 基準点を定める
+      - 現状を基準（０）とする
+      - 各オプションの中から１つの基準として使う
+    - 目指す方向性を基準にとる
+      - 目指している方向を基準にとり、各オプションがその方向性と合致しているか否かを評価する方法である。
+  - 採点の客観性・具体性を高める
+    - 優劣の度合いは、正負符号で表す
+    - 程度差を論理的・具体的に説明する
+  - 客観性の高い総合評価を工夫する
+    - １：単純総和法
+    - ２：ウエイトづけ総和法
+    - ３：条件設定法
+    - ４：２段階評価法
+    - ５：ロジカルマトリックス評価法
+  - 選択には主観が入ると心得る
+    - 
+    
