--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -1,155 +1,171 @@
 - 問題解決の５タイプ
-  - Trouble対応型
-    - 突発的に発生し、現状に大きなふぐい愛を与えている問題に対応すること
-  - Problem解決型
-    - 緊急性はないものの、明らかに理想的な姿と現状にギャップがあhっ性している
-  - Potential Risk回避型
-    - 問題を引き起こしそうな潜在的なリスク要因に対して、事前に処置を施し、その発生を未然に防ぐ
-  - Improvement Opportunity追求型
-    - 現状に甘んじず、よりベターな状況を目指して行う問題解決
-  - Theme回答型
-    - 上司や顧客などから投げかけられた心掛かりなテーマに対する問題解決
+    - Trouble対応型
+        - 突発的に発生し、現状に大きなふぐい愛を与えている問題に対応すること
+    - Problem解決型
+        - 緊急性はないものの、明らかに理想的な姿と現状にギャップがあhっ性している
+    - Potential Risk回避型
+        - 問題を引き起こしそうな潜在的なリスク要因に対して、事前に処置を施し、その発生を未然に防ぐ
+    - Improvement Opportunity追求型
+        - 現状に甘んじず、よりベターな状況を目指して行う問題解決
+    - Theme回答型
+        - 上司や顧客などから投げかけられた心掛かりなテーマに対する問題解決
 - うまい問題解決とは
-  - 個別の視点：「最もベター」な解決案を創る
-  - 全体の視点：コンスタントに勝ち星を重ねる
-  - 時間軸の視点：高度化する問題に対応し続ける
+    - 個別の視点：「最もベター」な解決案を創る
+    - 全体の視点：コンスタントに勝ち星を重ねる
+    - 時間軸の視点：高度化する問題に対応し続ける
 - 問題解決の方法論
-  - 空・雨・傘
-  - 解読・創案・評価・選択
+    - 空・雨・傘
+    - 解読・創案・評価・選択
 - 問題解決カルテット
-  - 問題解決ルーティーン（PSR）
-  - 問題解決モード（PSM）
-  - 問題解決ワーク・マネジメント（PSWM）
-  - 問題解決ツール（PST）
+    - 問題解決ルーティーン（PSR）
+    - 問題解決モード（PSM）
+    - 問題解決ワーク・マネジメント（PSWM）
+    - 問題解決ツール（PST）
 - 問題解決力を大きく伸ばすならどうするのか
-  - とにかく最後まで読み終える
-  - 何度も読み返す
-  - とにかく使って、それから戻ってくる
+    - とにかく最後まで読み終える
+    - 何度も読み返す
+    - とにかく使って、それから戻ってくる
 
 - 空・雨・傘をどう創るのか？
-  - 空がよく見えないときはFact gatheringで空を創る
-    - 空をみるための下準備。事実を集めること
-  - 雨は自らの解釈・判断で創る
-    - 他人の解釈を流用しない
-    - リスクを恐れていては判断は磨かれない
-  - 具体性のある傘を創る
-    - 慣用的な曖昧な表現を控える。効率化、企画する、共有する、把握する
+    - 空がよく見えないときはFact gatheringで空を創る
+        - 空をみるための下準備。事実を集めること
+    - 雨は自らの解釈・判断で創る
+        - 他人の解釈を流用しない
+        - リスクを恐れていては判断は磨かれない
+    - 具体性のある傘を創る
+        - 慣用的な曖昧な表現を控える。効率化、企画する、共有する、把握する
 
 - 「それ」と「それ以外」で【空・雨・傘】を広げよう
-  - 空・雨・傘は一通りとは限らない
-  - 異なる空が見える
-    - 自分の見える空は限られる
-    - 異なる空に答えが見えることがある
-    - マクロ視点・ミクロ視点
-      - SMとしても開発者には見えているチームの課題意識はいくつもあるように感じる
-      - このギャップを埋めるには1on1など意識的にコミュニケーションする必要がある
-  - １つの空から異なる雨が降る
-    - 常識的な雨が常にベターとは限らない
-  - 同じ雨から異なる傘が出る
-    - 最もベターな傘を選択する
-  - 空・雨・傘の枝分かれをイメージする
+    - 空・雨・傘は一通りとは限らない
     - 異なる空が見える
+        - 自分の見える空は限られる
+        - 異なる空に答えが見えることがある
+        - マクロ視点・ミクロ視点
+            - SMとしても開発者には見えているチームの課題意識はいくつもあるように感じる
+            - このギャップを埋めるには1on1など意識的にコミュニケーションする必要がある
     - １つの空から異なる雨が降る
+        - 常識的な雨が常にベターとは限らない
     - 同じ雨から異なる傘が出る
+        - 最もベターな傘を選択する
+    - 空・雨・傘の枝分かれをイメージする
+        - 異なる空が見える
+        - １つの空から異なる雨が降る
+        - 同じ雨から異なる傘が出る
 - 「段取り」と「意味合い」の空・雨・傘に注意
-  - 空・雨・傘の多重構造
-  - 段取りの空・雨・傘ではアクションの意思決定までしか至らない
-  - 意味合いの空・雨・笠を行うことで完成する
+    - 空・雨・傘の多重構造
+    - 段取りの空・雨・傘ではアクションの意思決定までしか至らない
+    - 意味合いの空・雨・笠を行うことで完成する
 - 万能薬「それ」と「それ以外」で対応できる
-  - １つの解決策が思いつけば、「それ」の対極にあるあるものを探す
-    - マクロ視点⇆ミクロ視点
-##【解読・草案・評価・選択】で精度を上げる
+    - １つの解決策が思いつけば、「それ」の対極にあるあるものを探す
+        - マクロ視点⇆ミクロ視点
+
+## 【解読・草案・評価・選択】で精度を上げる
+
 - 解読：経験、論理的思考などを組み合わせながら、問題の本当の姿を掴む
 - 創案：解読した問題に対し、解決するための方策すなわち解決策の選択肢をいくつか作り出すこと
 - 評価：創出した複数の解決案選択肢に対して、優劣をつけること
 - 選択：評価した選択肢の中から、最もベターな斧を選び出す
 - 解読で空・雨を見つけ出し
 - 創案・評価・選択で傘を決めていく
-## まずは【解読】に力を注ぐ
-- 何を解読するのか？
-  - データ
-  - 人の話
-  - 起こっている現象
-- 解読の２つのルール
-  - 問題が不明確な場合→独自に解読せよ
-  - 問題が明確に見える場合→それでも、独自に解読せよ
-    - 常識、経験や前例に剃って、形にはまったパターン認識をしやすい
-    - 目に見えやすい部分だけを問題と捉えやすい
-    - 多数意見・権威者の意見、印刷されたデータ・コメントを信じやすい
-- 解読の３パターン
-  - 視点変更
-    - 立ち位置変更：ものの見方を変える
-    - フィルター変更：パターン・形に当てはめて考えたり、意図的にそれを外して考えたりする
-    - 言い換え：初めの問題認識を意識的に言い換えて、それまでとは異なる捉え方をする
-  - 要因特定
-    - 初めの問題認識を、その理論的な構成要因に分解していき、問題を引き起こしている本当の原因を突き止めるもの
-    - 原因を特定して、意味合いを考えていく
-  - グルーピング推理
-    - ある問題を見て解読してもうまくいかないときに、その他の問題も組み合わせてグルーピングしながら解読していくアプローチ
-    - 複数の解読を組み合わせるとよりよさげな解読にたどり着く
-- 情報を増やす前に【解読】を
-  - 多くの情報収集に走るのは「答えを探す」癖の人である
-  - 解読を工夫するのは「答えを創る」意識のある人である
-    - よりベターな答えにたどり着けるのは後者である
-  - 解読に必要な情報は「情報収集家」が考えているよりももっと少ない
-    - 逆に情報が多すぎると答えに辿り着けなくなる
-  - ある程度の情報から解読を試みて、もっともらしい解読に行き当たったときに初めて、その正しさを証明するために事実を集めれば良い
 
-##【創案】では致命的な洩れをなくす
+## まずは【解読】に力を注ぐ
+
+- 何を解読するのか？
+    - データ
+    - 人の話
+    - 起こっている現象
+- 解読の２つのルール
+    - 問題が不明確な場合→独自に解読せよ
+    - 問題が明確に見える場合→それでも、独自に解読せよ
+        - 常識、経験や前例に剃って、形にはまったパターン認識をしやすい
+        - 目に見えやすい部分だけを問題と捉えやすい
+        - 多数意見・権威者の意見、印刷されたデータ・コメントを信じやすい
+- 解読の３パターン
+    - 視点変更
+        - 立ち位置変更：ものの見方を変える
+        - フィルター変更：パターン・形に当てはめて考えたり、意図的にそれを外して考えたりする
+        - 言い換え：初めの問題認識を意識的に言い換えて、それまでとは異なる捉え方をする
+    - 要因特定
+        - 初めの問題認識を、その理論的な構成要因に分解していき、問題を引き起こしている本当の原因を突き止めるもの
+        - 原因を特定して、意味合いを考えていく
+    - グルーピング推理
+        - ある問題を見て解読してもうまくいかないときに、その他の問題も組み合わせてグルーピングしながら解読していくアプローチ
+        - 複数の解読を組み合わせるとよりよさげな解読にたどり着く
+- 情報を増やす前に【解読】を
+    - 多くの情報収集に走るのは「答えを探す」癖の人である
+    - 解読を工夫するのは「答えを創る」意識のある人である
+        - よりベターな答えにたどり着けるのは後者である
+    - 解読に必要な情報は「情報収集家」が考えているよりももっと少ない
+        - 逆に情報が多すぎると答えに辿り着けなくなる
+    - ある程度の情報から解読を試みて、もっともらしい解読に行き当たったときに初めて、その正しさを証明するために事実を集めれば良い
+
+## 【創案】では致命的な洩れをなくす
+
 - 解決オプション（選択肢）の洩れをなくすことが大事
 - 情報収集や分析は何のために行うのか
-  - 解読のために行う
-  - 何が怒っているのか解読するため、データを集め、人の話を聞き、現象を観察する
+    - 解読のために行う
+    - 何が怒っているのか解読するため、データを集め、人の話を聞き、現象を観察する
 
 ## 【創案】は、【解読】と明確に区別しよう
+
 - 解決策のオプション作りは、情報収集や分析から必ずしも直接的に導かれるものではない
 - 創案ステップと、情報収集や分析が重要な役割を持つ解読ステップとは全く別物であり、解読ステップを第１の戦いとすると、創案ステップは全く異なる第２の戦いになる
 - ２つのステップの違いをはっきりとさせておかないと、切れ味の乏しい解決案になる
 
 ### 創案に思い込みは禁物
+
 - 過去の成功体験
 - 直感の過信
 - 部分的世界観
 
 ### 創案には３つのイメージで臨む
+
 - 洩れのない創案構造
 - 「何を」と「どうやって」の構造
 - 「OR型」と「AND型」の構造
 
-
 ### あくまで客観性の高い「評価」を心がける
+
 - 評価とは、創出した解決案オプションの優劣をつけること
 - 客観性の高い評価を行うポイント
-  - 評価項目の偏りをなくす
-  - 優劣の基準を明確にする
-  - 採点の客観性・具体性を高める
-  - 客観性の高い総合評価を工夫する
+    - 評価項目の偏りをなくす
+    - 優劣の基準を明確にする
+    - 採点の客観性・具体性を高める
+    - 客観性の高い総合評価を工夫する
 
 - 評価項目の偏りをなくす
-  - 見えやすい項目と見えにくい項目を等距離で見る
-    - どうしても「見えやすい項目」の方に自然に目が向きやすい、あるいは重きを置く傾向がある
-    - スクラムマスターの評価で、ベロシティに現れるものとそうでないマインドセットの取り組みとか
-  - 評価項目を論理的に隙なく固める
-    - 評価項目の論理構造を創る
-    - 定量評価、定性評価の
-  - 優劣の基準を明確にする
-    - 基準点を定める
-      - 現状を基準（０）とする
-      - 各オプションの中から１つの基準として使う
-    - 目指す方向性を基準にとる
-      - 目指している方向を基準にとり、各オプションがその方向性と合致しているか否かを評価する方法である。
-  - 採点の客観性・具体性を高める
-    - 優劣の度合いは、正負符号で表す
-    - 程度差を論理的・具体的に説明する
-  - 客観性の高い総合評価を工夫する
-    - １：単純総和法
-    - ２：ウエイトづけ総和法
-    - ３：条件設定法
-    - ４：２段階評価法
-    - ５：ロジカルマトリックス評価法
-  - 選択には主観が入ると心得る
-    - 理屈は分かるんだけど、できないんだよね
-    - 選択には主観的要素が入る
-    - べき論を言っても始まらない。愚痴を言っても後の祭り
-    - 相手の意思決定スタイルに共感し、それに備えよう
-    
+    - 見えやすい項目と見えにくい項目を等距離で見る
+        - どうしても「見えやすい項目」の方に自然に目が向きやすい、あるいは重きを置く傾向がある
+        - スクラムマスターの評価で、ベロシティに現れるものとそうでないマインドセットの取り組みとか
+    - 評価項目を論理的に隙なく固める
+        - 評価項目の論理構造を創る
+        - 定量評価、定性評価の
+    - 優劣の基準を明確にする
+        - 基準点を定める
+            - 現状を基準（０）とする
+            - 各オプションの中から１つの基準として使う
+        - 目指す方向性を基準にとる
+            - 目指している方向を基準にとり、各オプションがその方向性と合致しているか否かを評価する方法である。
+    - 採点の客観性・具体性を高める
+        - 優劣の度合いは、正負符号で表す
+        - 程度差を論理的・具体的に説明する
+    - 客観性の高い総合評価を工夫する
+        - １：単純総和法
+        - ２：ウエイトづけ総和法
+        - ３：条件設定法
+        - ４：２段階評価法
+        - ５：ロジカルマトリックス評価法
+    - 選択には主観が入ると心得る
+        - 理屈は分かるんだけど、できないんだよね
+        - 選択には主観的要素が入る
+        - べき論を言っても始まらない。愚痴を言っても後の祭り
+        - 相手の意思決定スタイルに共感し、それに備えよう
+
+### 危ない「落とし穴」に近寄るべからず
+
+- 問題解決全体に潜む「落とし穴」
+    - 情報収集マニア・分析中毒症
+    - プチ評論家
+    - 短絡・ひらめき過信症
+    - 独善詭弁家
+- 
