--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -148,5 +148,8 @@
     - ４：２段階評価法
     - ５：ロジカルマトリックス評価法
   - 選択には主観が入ると心得る
-    - 
+    - 理屈は分かるんだけど、できないんだよね
+    - 選択には主観的要素が入る
+    - べき論を言っても始まらない。愚痴を言っても後の祭り
+    - 相手の意思決定スタイルに共感し、それに備えよう
     
