--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -168,4 +168,21 @@
     - プチ評論家
     - 短絡・ひらめき過信症
     - 独善詭弁家
-- 
+- 解読に潜む落とし穴
+  - 思考停止
+  - 鵜呑み
+  - 浅堀り
+  - 黒幕逃し
+- 創案に潜む落とし穴
+  - コインの裏返し
+  - ネガティブ・パーフェクト
+  - 月並み発想
+  - 夢想家的机上論
+  - 部分的世界観
+  - 得意技偏向
+- 評価に潜む落とし穴
+  - 見た目評価
+  - 曖昧評価
+  - 恣意的評価
+- 選択に潜む落とし穴
+  - べき論
