--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -188,3 +188,42 @@
   - べき論
 
 # 問題解決は、威力のある道具を使って進める
+- 洩れのない見方
+  - MECE
+  - 対極オプション
+  - ペア・コンセプト
+  - ロジカル因数分解
+  - フレームワーク
+  - それとそれ以外
+- 論理的なツリー
+  - 因数分解ツリー
+  - ロジックツリー
+  - ロジカル評価軸
+- 特殊な論理ツール
+  - ロジック問答
+  - パラフレイジング
+  - 進化・深化マトリックス
+  - ロジカルマトリックス
+  - グルーピング推理
+
+## 洩れのない見方を押さえる
+- 漏れない見方のヒント
+  - パリえーションをできるだけ覚える
+  - 最も鮮やかな見方を選ぶ
+- MECE
+  - ここの要素が重なっていないと同時にここの要素を合わせれば全体をカバーできる
+- 論理的なツリーを組み立てる
+  - 解読で要因を特定する
+  - 創案で解決案のオプションを作る
+  - 評価で評価軸を固める
+- ロジックツリー
+  - まず当たり前の答えを考える
+  - 当たり前の答えの対極を考える
+  - アイデアを深掘りする（ズームイン）
+  - ズームアウトして大きな見落としをなくす
+  - ズームアウトの視点を広げる
+- ロジカル評価軸
+  - 感度の高いペア・コンセプトを選ぶ
+  - 評価軸の基本構造を考える
+  - 評価軸を別の論理ツールでブレークダウンする
+  - 評価軸を完成させる
